# tdawm

./: Cargo.toml  README.md  debug.py  justfile  start_x.sh  xinitrc
src/: main.rs  tdawm.rs  workspace.rs  x11.rs
src/config/: mod.rs
src/layouts/: dwm.rs  horizontal.rs  mod.rs  vertical.rs
src/miniwm/: mod.rs
src/tdawm/: context.rs  mod.rs  screen.rs  tdawm.rs  window.rs  workspace.rs
