[package]
name = "tdawm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.3"
log = "0.4.21"
thiserror = "1.0.61"
x11 = { version = "2.21.0", features = ["xlib","xinerama"] }
toml="0.5"
serde = {version="1.0", features=["derive"]}
execute = "0.2.13"

[profile.release]
strip = true
opt-level = "z"
lto = true
